# qcsim

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  example.qc  go.mod  go.sum  mise.toml  qcsim.go
.github/workflows/: release.yml
computer/: apply.go  computer.go
qc-zed/: extension.toml
qc-zed/languages/qc/: config.toml
qclang/: parse.go  qclang.go  run.go
qubit/: qubit.go
src/: computer.rs  main.rs  parser.rs  qubit.rs
tree-sitter-qc/: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
tree-sitter-qc/bindings/go/: binding_test.go
tree-sitter-qc/bindings/python/tree_sitter_qc/: __init__.py
tree-sitter-qc/bindings/rust/: lib.rs
tree-sitter-qc/queries/: highlights.scm
tree-sitter-qc/src/: grammar.json  node-types.json  parser.c
