[package]
name = "qcsim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
num-complex = "0.4.6"
rand = "0.9.0"
tree-sitter = "0.25.3"
tree-sitter-qc = { version = "0.1.0", path = "tree-sitter-qc" }
